# xarray-quantity

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_dataformats.py  test_script.py
xarray_quantity/: __init__.py  quantity_array.py  quantity_set.py
